# timer-app

./: README.md
backend/: .env  .env.example  README.md  pyproject.toml
backend/app/: config.py  constants.py  main.py  redis_client.py  utils.py
backend/app/api/: __init__.py  deps.py
backend/app/api/endpoints/: assignments.py  auth.py  dashboard.py  logs.py  projects.py  rbac.py  reports.py  tasks.py  time_entries.py  timer.py  users.py
backend/app/db/: connection.py  init_db.py  seed.py
backend/app/middleware/: csrf.py  security_headers.py
backend/app/models/: __init__.py  assignment_model.py  log_models.py  permission_scope_model.py  project_manager_model.py  project_model.py  role_model.py  role_permission_model.py  task_model.py  time_entry_model.py  user_model.py
backend/app/repositories/: assignment_repository.py  auth_log_repository.py  log_repository.py  project_manager_repository.py  project_repository.py  rbac_repository.py  task_repository.py  time_entry_repository.py  user_repository.py
backend/app/services/: assignment_service.py  auth_service.py  bff_auth_service.py  csv_service.py  dashboard_service.py  project_service.py  session_store.py  time_entry_service.py  timer_service.py  user_service.py
backend/docs/: AI_Rules.md
backend/tests/: README.md  conftest.py  factories.py  helpers.py  test_assignments.py  test_auth.py  test_health.py  test_logs.py  test_projects_tasks.py  test_reports.py  test_roles_permissions.py  test_time_entries.py  test_users.py
docs/: guidelines for git.md
frontend/: .env  .env.example  Vitest.config.ts  (+4 more)
(+156 files in other folders)
