[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=5.0.0",
    "cffi>=2.0.0",
    "click>=8.3.3",
    "cryptography>=48.0.0",
    "ecdsa>=0.19.2",
    "fastapi>=0.136.1",
    "h11>=0.16.0",
    "httptools>=0.7.1",
    "idna>=3.13",
    "passlib>=1.7.4",
    "pyasn1>=0.6.3",
    "pycparser>=3.0",
    "pydantic[email]>=2.13.3",
    "pydantic-core>=2.46.3",
    "pydantic-settings>=2.14.0",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.27",
    "typing-extensions>=4.15.0",
    "uvicorn>=0.46.0",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.49",
    "psycopg2-binary>=2.9.12",
    "sqlalchemy-utils>=0.42.1",
]

[dependency-groups]
dev = [
    "anyio[trio]>=4.13.0",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "openpyxl>=3.1.5",
    "pytest>=9.0.3",
    "pytest-anyio>=0.0.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath    = ["."]
log_cli       = true
log_cli_level = "INFO"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "auth: Authentication endpoint tests",
    "tasks: Task endpoint tests",
    "timer: Timer endpoint tests",
]
[tool.uv]
package = true
